Mojo: removing support for process-group.

Process groups are currently not used, removing them.

BUG=658407

Review-Url: https://codereview.chromium.org/2440203002
Cr-Commit-Position: refs/heads/master@{#428197}

Former-commit-id: 2fb1764136e5492e3d0d7f4fd9f45c91ef8f3d5a